Java 9 reflects